--- a/app/views/board/index.html.erb
+++ b/app/views/board/index.html.erb
@@ -6,6 +6,7 @@
 
   <% @posts.each do |p| %>
   <div class="well">
+    <img height="100" width="150" src="<%= p.photo.url %>">
     <a href="/board/<%= p.id%>">제목 : <%= p.title%></a></br>
     </div>
     <% end %>
