--- a/app/views/board/new.html.erb
+++ b/app/views/board/new.html.erb
@@ -1,14 +1,16 @@
 <h1>새로운 글쓰기</h1>
 <p>새로운 글을 입력해주세요.</p>
 
-<form action="/board/create">
+<form action="/board/create" method="post" enctype="multipart/form-data">
   제목:<br>
   <input type="text" name="title" placeholder="제목을 입력해주세요">
   <br>
   내용:<br>
   <input type="text" name="content" placeholder="내용을 입력해주세요">
   <br><br>
+  <input type="file" name="photo" accept="/image">
   <input type="submit" value="제출">
+  
 </form> 
 
 <a href="/">홈으로</a>
